# automated-ai-assistant

./: .gitignore  pyproject.toml
src/automated_ai_assistant/: app.py  data_types.py  google_utils.py  oltp_tracing.py  registry.py  session_verifier.py
src/automated_ai_assistant/agent/: chat_agent.py  greeter.py  schedule_meeting.py  send_email.py  set_reminder.py  task_router.py  utils.py
src/automated_ai_assistant/model/: data_types.py
src/automated_ai_assistant/utils/: google_utils.py  registry_utils.py  runtime_utils.py
