[tool.poetry]
name = "automated-ai-assistant"
version = "0.1.0"
description = ""
authors = ["shreyanavelkar <shreya.navelkar@gmail.com>"]
readme = "README.md"
packages = [{include = "automated_ai_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
