[tool.poetry]
name = "automated-ai-assistant"
version = "0.1.0"
description = ""
authors = ["shreyanavelkar"]
readme = "README.md"
packages = [{include = "automated_ai_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
autogen-ext = "0.4.0.dev11"
autogen-core = "0.4.0.dev11"
autogen-agentchat = "0.4.0.dev11"
google-api-python-client = "^2.156.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
pydantic = "^2.10.4"
pyyaml = "^6.0.2"
email-validator = "^2.2.0"
fastapi = "^0.115.6"
opentelemetry-api = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-openai = "0.33.9"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
opentelemetry-exporter-otlp-proto-http = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
